# FIPP-Plugins

./: CMakeLists.txt  Readme.md  conanfile.txt
include/Plugins/: MetaDataLogger.hpp
include/Sources/: TestVideoSrc.hpp
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt
src/Apps/PluginChecker/: CMakeLists.txt  PluginChecker.cpp
src/Plugins/MetaDataLogger/: CMakeLists.txt  MetaDataLogger.hpp  metaDataLogger.cpp
src/Sinks/: CMakeLists.txt
src/Sinks/ImageExporter/: CMakeLists.txt  ImageExporter.cpp  ImageExporter.hpp
src/Sinks/TestVideoSink/: CMakeLists.txt  TestVideoSink.cpp  TestVideoSink.hpp
src/Sources/: CMakeLists.txt
src/Sources/TestVideoSrc/: CMakeLists.txt  TestVideoSrc.cpp  TestVideoSrc.hpp
test/: CMakeLists.txt
test/Pipeline/: CMakeLists.txt
test/Pipeline/TestVideoSrcSink/: CMakeLists.txt  TestVideoSrcSinkTest.cpp
test/Plugins/: CMakeLists.txt
test/Plugins/MetaDataLogger/: CMakeLists.txt  MetaDataLoggerTest.cpp
test/Sinks/TestVideoSink/: CMakeLists.txt  TestVideoSinkTest.cpp
test/Sources/TestVideoSrc/: CMakeLists.txt  TestVideoSrcTest.cpp
