cmake_minimum_required(VERSION 3.14)
project(PluginChecker)
find_package(yaml-cpp)
set(PipelineElements_DIR "/usr/local/lib/cmake/FIPP/PipelineElements")
find_library(PIPELINEELEMENTS_LIBRARY PipelineElements Point HINTS /usr/local/lib/FIPP)
set(ImageContainer_DIR "/usr/local/lib/cmake/FIPP/ImageContainer")
find_library(IMAGECONTAINER_LIBRARY ImageContainer HINTS /usr/local/lib/FIPP)
set(Logging_DIR "/usr/local/lib/cmake/FIPP/Logging")
find_library(LOGGING_LIBRARY Logging HINTS /usr/local/lib/FIPP)
set(Point_DIR "/usr/local/lib/cmake/FIPP/Point")
find_library(POINT_LIBRARY Point HINTS /usr/local/lib/FIPP)
add_executable(PluginChecker PluginChecker.cpp)
target_link_libraries(PluginChecker PUBLIC yaml-cpp ${PIPELINEELEMENTS_LIBRARY} ${IMAGECONTAINER_LIBRARY} ${POINT_LIBRARY} ${LOGGING_LIBRARY})
